# AiInfra

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY.md
benchmarks/: cuda_relu_operator_benchmark.cc  onnx_parser_benchmark.cc
cpp/: template.md
cpp/0_Introduction/: CMakeLists.txt  README.md
cpp/0_Introduction/vectorAdd/: CMakeLists.txt  template.md  vec_add_0.cu  vec_add_1.cu
docs/cuda-learning/: 01-vector-add.md  02-elementwise.md  02-relu.md  03-reduce.md  03-softmax.md  04-sgemm.md  04-softmax.md  05-mat-transpose.md  05-triton.md  06-sgemm.md  07-triton.md  README.md
include/onnx/: onnx.pb.cc  onnx.pb.h
include/onnx_parser/: data_type.h  onnx_op_mapping.h  onnx_parser.h  op_kind.h  operator.h  operator_registry.h  shape_inference.h
include/onnx_parser/backend/cuda/: cuda_executor.h  cuda_operator.h  cuda_operator_registry.h  cuda_tensor.h  cuda_utils.h
include/onnx_parser/backend/cuda/operators/: add.h  identity.h  relu.h
include/onnx_parser/operators/: add.h  batch_normalization.h  common.h  conv.h  flatten.h  gemm.h  global_average_pool.h  max_pool.h  unary.h
scripts/: export_resnet18.py
src/backend/cuda/: cuda_executor.cc  cuda_operator_registry.cc  cuda_tensor.cc
src/backend/cuda/operators/: add.cu  identity.cu  relu.cu
src/cuda-learning/: CMakeLists.txt
src/cuda-learning/01-vector-add/: CMakeLists.txt  kernel.cu  kernel.py  my_kernel.cu  my_kernel.py
src/cuda-learning/02-elementwise/: CMakeLists.txt  kernel.cu  kernel.py  my_kernel.cu  my_kernel.py
src/cuda-learning/03-reduce/: CMakeLists.txt  kernel.cu  kernel.py  my_kernel.cu  my_kernel.py
src/cuda-learning/04-softmax/: CMakeLists.txt  kernel.cu  kernel.py  my_kernel.cu  my_kernel.py
src/cuda-learning/05-mat-transpose/: CMakeLists.txt  kernel.cu  kernel.py  my_kernel.cu  my_kernel.py
src/cuda-learning/06-sgemm/: CMakeLists.txt  kernel.cu  kernel.py  my_kernel.cu  my_kernel.py
src/cuda-learning/07-triton/: kernel.py  my_kernel.py
src/cuda-learning/common/: common.cuh
src/onnx_parser/: builtin_operators.cc  data_type.cc  main.cc  onnx_op_mapping.cc  onnx_parser.cc  op_kind.cc  operator.cc  operator_registry.cc  shape_inference.cc
src/onnx_parser/operators/: add.cc  batch_normalization.cc  common.cc  conv.cc  flatten.cc  gemm.cc  global_average_pool.cc  max_pool.cc  register_builtin.cc  unary.cc
tests/: cuda_add_operator_test.cc  cuda_backend_test.cc  cuda_relu_operator_test.cc  onnx_parser_test.cc
